# nav2py_template

./: .gitmodules  README.md  my_nav2_params.yaml
ament_cmake_venv/: CMakeLists.txt  ament_cmake_venv-extras.cmake  package.xml
ament_cmake_venv/cmake/: venv_create.cmake  venv_install.cmake  venv_pip.cmake  venv_script.cmake
ament_cmake_venv_uv/: CMakeLists.txt  ament_cmake_venv_uv-extras.cmake  package.xml
ament_cmake_venv_uv/cmake/: uv_venv.cmake
nav2py/: CMakeLists.txt  nav2py-extras.cmake  package.xml
nav2py/cmake/: nav2py_package.cmake
nav2py/include/nav2py/: controller.hpp
nav2py/nav2py/: setup.py
nav2py/nav2py/nav2py/: __init__.py
nav2py/nav2py/nav2py/interfaces/: __init__.py
nav2py_template_controller/: CMakeLists.txt  nav2py_template_controller.xml  package.xml  pyproject.toml
nav2py_template_controller/include/nav2py_template_controller/: template_controller.hpp
nav2py_template_controller/nav2py_template_controller/: setup.py
nav2py_template_controller/nav2py_template_controller/nav2py_template_controller/: __main__.py  pas.py  vae.pth
nav2py_template_controller/src/: template_controller.cpp
