<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_venv_uv</name>
  <version>1.3.11</version>
  <description>Use uv to create venv and install.</description>

  <maintainer email="dev@voshch.dev">Volodymyr Shcherbyna</maintainer>

  <license>Apache License 2.0</license>

  <author>Volodymyr Shcherbyna</author>

  <depend>ament_cmake_venv</depend>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
